--- a/frontend_templates/registration/signup.html
+++ b/frontend_templates/registration/signup.html
@@ -141,6 +141,8 @@
       <br />
       
       <button class="btn btn-lg btn-primary btn-block form-block" type="submit">Sign Up</button>
+      <br/>
+      <p class="signing-up">By clicking Sign Up, you agree to our <a href="/terms_conditions">terms and conditions</a></p>
     </form>
 </div>
 
