--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -144,7 +144,7 @@
                         <div class="col-md-12">
                             <p class="step-description">Detail the names and contents of the files that the user has to submit. For every file that has to be submitted, 
                                     a starter code file needs to be declared. You can optionally fill in some parts of the file 
-                                    to get the user started. We automatically import 
+                                    to get the interviewee started. For non-programming files, just declare the name and toggle the Code switch and leave the body blank. We automatically import 
                                     all of the supporting code files for each starter file when the user submits or runs test cases. <br />An example is below in the "Code" option of the toggle.
                             </p>
                             <hr />
@@ -155,11 +155,11 @@
                                         <div class="centered">File <label class="switch"><input type="checkbox" name="starter_switch_1" id="starter_switch_1"><span class="slider round"></span></label> Code</div>
                                         <div class="centered"><input class="inputfile" type="file" id="starter_file_1" name="starter_file_1"></div>
                                         <div><input class="form-control name-of-file" id="starter_body_name_1" maxlength="128" name="starter_body_name_1" placeholder="name of file (include extension)"></input></div>                                     
-<div id="starter_body_1" class="code-editor">def example_stub_file_method_the_user_can_implement():
+<div id="starter_body_1" class="code-editor">def example_required_file_method_the_user_can_implement():
     pass
 
-class StubClassThatTheUserCanFillOut:
-    def method_in_stub_class(self):
+class RequireClassThatTheUserCanFillOut:
+    def method_in_require_class(self):
         pass</div>
                                         <textarea name="starter_body_1"></textarea>
                                     </div>
@@ -246,12 +246,12 @@ class TestCases(unittest.TestCase):
                                         <div class="centered">File <label class="switch"><input type="checkbox" name="solution_switch_1" id="solution_switch_1"><span class="slider round"></span></label> Code</div>
                                         <div class="centered"><input class="inputfile" type="file" id="solution_file_1" name="solution_file_1"></div>
                                         <div><input class="form-control name-of-file" id="solution_body_name_1" maxlength="128" name="solution_body_name_1" placeholder="name of file (include extension)"></input></div>
-<div id="solution_body_1" class="code-editor">def example_stub_file_method_the_user_can_implement():
-    # your implementation to the stub file here
+<div id="solution_body_1" class="code-editor">def example_required_file_method_the_user_can_implement():
+    # your implementation to the required file here
 
-class StubClassThatTheUserCanFillOut:
-    def method_in_stub_class(self):
-        # your implementation to the stub file here</div>
+class RequiredClassThatTheUserCanFillOut:
+    def method_in_required_class(self):
+        # your implementation to the required file here</div>
                                         <textarea name="solution_body_1"></textarea>
                                     </div>
                                 </div>
